додав розмітку портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
                 <!-- Заголовок сховати в css -->
                 <h1>Примеры работ</h1>
                 
-                <ul>
-                    <li class="list"><button type="button" class="button">Все</button></li>
+                <ul class="list-button">
+                    <li class="list"><button type="button" class="button">Усі</button></li>
                     <li class="list"><button type="button" class="button">Веб-сайти</button></li>
                     <li class="list"><button type="button" class="button">Додатки</button></li>
                     <li class="list"><button type="button" class="button">Дизайн</button></li>
