--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
     <header>
         <div class="container">
-            <nav>
+            <nav class="main-nav">
                 <a href="./index.html" class="logo link">
                     <span class="logo-web">Web</span>Studio
                 </a>
@@ -25,15 +25,18 @@
                     <li class="list"><a href="./portfolio.html" class="link">Портфоліо</a></li>
                     <li class="list"><a href="#Контакты" class="link">Контакти</a></li>
                 </ul>
+
+                <ul class="site-contacts">
+                    <li class="list">
+                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    </li>
+                    <li class="list">
+                        <a href="tel:+380961111111" class="link">+380961111111</a>
+                    </li>
+                </ul>
             </nav>
-            <ul class="site-contacts">
-                <li class="list">
-                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                </li>
-                <li class="list">
-                    <a href="tel:+380961111111" class="link">+380961111111</a>
-                </li>
-            </ul>
+
+
         </div>
     </header>
 
