Вирівняв секції за flex box

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </div>
         </section>
         
-        <section class="features ">
-            <div class="container section   ">
-                        <!-- Схлвати в CSS -->
-                        <h2>Особливості</h2>
+        <section class="features">
+            <div class="container section">
+                        <!-- Сховати в CSS -->
+                        <h2 class="hidden-header">Особливості</h2>
                         
-                        <ul>
+                        <ul class="features-list">
                             <li class="list">
                                 <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                                 <p class="paragraph">
@@ -85,7 +85,7 @@
         <section class="work">
             <div class="container section">
                 <h2 class="work-title">Чим ми займаємося</h2>
-                <ul>
+                <ul class="work-list">
                     <li class="list">
                         <img src="images/developer.jpg" alt="Валидная верстка сайтов" width="370">
                     </li>
@@ -102,23 +102,23 @@
         <section class="team">
             <div class="container section">
                 <h2 class="team-title">Наша команда</h2>
-                <ul>
-                    <li class="list">
+                <ul class="team-list">
+                    <li class="list border-list">
                         <img src="images/team/designer.jpg" alt="Фото продуктового дизайнера" width="270" class="team-img">
                         <h3 class="team-subtitle">Ігор Дем'яненко</h3>
                         <p class="team-text">Product Designer</p>
                     </li>
-                    <li class="list">
+                    <li class="list border-list">
                         <img src="images/team/frontend.jpg" alt="Фото фронтенд разработчици" width="270" class="team-img">
                         <h3 class="team-subtitle">Ольга Рєпіна</h3>
                         <p class="team-text">Frontend Developer</p>
                     </li>
-                    <li class="list">
+                    <li class="list border-list">
                         <img src="images/team/marketing.jpg" alt="Фото маркетолога" width="270" class="team-img">
                         <h3 class="team-subtitle">Микола Тарасов</h3>
                         <p class="team-text">Marketing</p>
                     </li>
-                    <li class="list">
+                    <li class="list border-list">
                         <img src="images/team/ui.jpg" alt="Фото веб дизайнера" width="270" class="team-img">
                         <h3 class="team-subtitle">Михайло Єрмаков</h3>
                         <p class="team-text">UI Designer</p>
