--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
 
     <main>
         <section class="examples">
-            <div class="container">
+            <div class="container section">
                 <!-- Заголовок сховати в css -->
-                <h1>Примеры работ</h1>
+                <h1 class="hidden-header">Примеры работ</h1>
                 
                 <ul class="list-button">
                     <li class="list"><button type="button" class="button">Усі</button></li>
@@ -54,7 +54,7 @@
                     <li class="list"><button type="button" class="button">Маркетинг</button></li>
                 </ul>
                 
-                <ul>
+                <ul class="examples-list">
                     <li class="list">
                         <a href="" class="link">
                             <img src="./images/examples-work/img.jpg" alt="Главная страница созданого сайта" width="370">
