вніс виправлення для ДЗ

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </header>
 
     <main>
-      <section class="hero">
-        <div class="container section">
+      <section class="hero section">
+        <div class="container ">
           <h1 class="hero-title">
             Ефективні рішення для <br />
             вашого бізнесу
@@ -52,8 +52,8 @@
         </div>
       </section>
 
-      <section class="features">
-        <div class="container section">
+      <section class="features section">
+        <div class="container">
           <!-- Сховати в CSS -->
           <h2 class="hidden-header">Особливості</h2>
 
@@ -86,8 +86,8 @@
         </div>
       </section>
 
-      <section class="work">
-        <div class="container section">
+      <section class="work section">
+        <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list">
             <li class="list">
@@ -103,8 +103,8 @@
         </div>
       </section>
 
-      <section class="team">
-        <div class="container section">
+      <section class="team section">
+        <div class="container">
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
             <li class="list border-list">
