--- a/portfolio.html
+++ b/portfolio.html
@@ -41,8 +41,8 @@
     </header>
 
     <main>
-        <section class="examples">
-            <div class="container section">
+        <section class="examples section">
+            <div class="container">
                 <!-- Заголовок сховати в css -->
                 <h1 class="hidden-header">Примеры работ</h1>
                 
