--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
         <section class="examples section">
             <div class="container">
                 <!-- Заголовок сховати в css -->
-                <h1 class="hidden-header">Примеры работ</h1>
+                <h1 class="hidden-header">Приклади робіт</h1>
                 
                 <ul class="list-button">
                     <li class="list"><button type="button" class="button">Усі</button></li>
