--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </header>
 
     <main>
+      <div class="box">
       <section class="hero section">
         <div class="container ">
           <h1 class="hero-title">
@@ -51,6 +52,8 @@
           <button type="button" class="button-hero">Замовити послугу</button>
         </div>
       </section>
+      </div>
+
 
       <section class="features section">
         <div class="container">
@@ -151,6 +154,12 @@
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <section class="customers section">
+        <div class="container">
+          <h2 class="customers-title">Постійні клієнти</h2>
         </div>
       </section>
     </main>
